--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <body>
         <nav>
-            <a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/2663984292030924397">Pick Ems</a>
-            <a href="https://tracker.gg/valorant/profile/riot/BeanBaller%23bean">Tracker</a>
+            <a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">Pick Ems</a>
+            <a href="https://tracker.gg/valorant/profile/riot/beanballer%20com%23web">Tracker</a>
+            <a href="./clips">Clips</a>
             <div class="trapezoid">
                 <h1>BeanBaller</h1>
             </div>
