Updated clips path

--- a/clips/index.html
+++ b/clips/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">Pick Ems</a>
             <a href="https://tracker.gg/valorant/profile/riot/beanballer%20com%23web">Tracker</a>
-            <a href="./clips">Clips</a>
+            <a href=".">Clips</a>
             <div class="trapezoid">
                 <h1>BeanBaller</h1>
             </div>
