Update headers and main webpage clip

--- a/clips/index.html
+++ b/clips/index.html
@@ -5,18 +5,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="author" content="Owen Bean">
+        <meta name="description" content="NA Valorant rank player BeanBaller. BeanBaller rank clips with quick multi-kills happening.">
+        <title>BeanBaller Clips</title>
     </head>
 
     <body>
         <nav>
-            <a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">Pick Ems</a>
-            <a href="https://tracker.gg/valorant/profile/riot/beanballer%20com%23web">Tracker</a>
-            <a href=".">Clips</a>
+            <a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">PickEms</a>
+            <a href="../rank">Rank</a>
             <div class="trapezoid">
                 <h1>BeanBaller</h1>
             </div>
+            <a href=".">Clips</a>
             <a href="https://www.twitch.tv/beaneballer">Twitch</a>
-            <a href="../rank">Rank</a>
         </nav>
 
         <main id="main">
