Added about me page and fix mobile navigation bar arrows

--- a/clips/index.html
+++ b/clips/index.html
@@ -24,8 +24,8 @@
                     <li><a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">PickEms</a></li>
                 </ul>
                 <div class="toggle-containers" @click="showNavBarPhone = !showNavBarPhone">
-                    <div :class="['arrow', (showNavBarPhone ? 'up-right': 'down')]">V</div>
-                    <div :class="['arrow', (showNavBarPhone ? 'up-left': 'down')]">V</div>
+                    <div :class="['arrow', (showNavBarPhone ? 'up-right': 'down')]"></div>
+                    <div :class="['arrow', (showNavBarPhone ? 'up-left': 'down')]"></div>
                 </div>
             </div>
         </nav>
