--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <li><a href="https://valorantesports.com/en-US/pickems/113482053125573837/picks/1263478127707871988/5090123810564294632">PickEms</a></li>
                 </ul>
                 <div class="toggle-containers" @click="showNavBarPhone = !showNavBarPhone">
-                    <div :class="['arrow', (showNavBarPhone ? 'up-right': 'down')]">V</div>
-                    <div :class="['arrow', (showNavBarPhone ? 'up-left': 'down')]">V</div>
+                    <div :class="['arrow', (showNavBarPhone ? 'up-right': 'down')]"></div>
+                    <div :class="['arrow', (showNavBarPhone ? 'up-left': 'down')]"></div>
                 </div>
             </div>
         </nav>
@@ -101,6 +101,12 @@
                     </div>
                 </a>
                 <a class="fetch-more-button" href="./rank">View More Rank</a>
+            </div>
+
+            <div class="about-window">
+                <h2>About</h2>
+                <p>Owen "BeanBaller" Bean is a competitive Valorant player from the NA region, known for his strategic play and deep agent mastery. His primary agent is Astra, chosen for her powerful utility and his proficiency with a lurking smokes-based playstyle. Depending on the map, he flexes into other roles—playing Gekko or Sova as an Initiator, and Killjoy or Cypher as a Sentinel. On Bind, he excels with Brimstone, utilizing his kit to full advantage on that specific map.</p>
+                <p>BeanBaller competed in the ECAC during Spring semester as part of the University of Southern Maine (USM) Esports Club, where his dedication and performance earned him the title of Rookie of the Month. The season concluded at the end of the semester, coinciding with his graduation from USM with a degree in Computer Science.</p>
             </div>
         </main>
 
